2010-07-28  Gene Gutnik  <gene@google.com>

Reviewed by Darin Fisher.

        Fix mouse coordinate conversion. WindowX,Y is an absolute
        mouse coordinates within browser window, x,y - are coordinates
        relative to the plugin.
        https://bugs.webkit.org/show_bug.cgi?id=42987

        * src/WebInputEventConversion.cpp:
        (WebKit::WebMouseEventBuilder::WebMouseEventBuilder):
        (WebKit::WebMouseWheelEventBuilder::WebMouseWheelEventBuilder):
        * src/WebInputEventConversion.h:
        * src/WebPluginContainerImpl.cpp:
        (WebKit::WebPluginContainerImpl::handleMouseEvent):
        (WebKit::WebPluginContainerImpl::handleWheelEvent):



Canonical link: https://commits.webkit.org/55067@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64243 268f45cc-cd09-0410-ab3c-d52691b4dbfc